# gog-galaxy-social

./: .dorpsgek.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  download-sdk.sh
.github/workflows/: ci-build.yml  dummy.yml  release-macos.yml  release-source.yml  release-windows.yml  release.yml  upload-cdn.yml  upload-github.yml
cmake/: CompileFlags.cmake  InstallAndPackage.cmake  PackageBundle.cmake  PostInstall.cmake.in  RPath.cmake  Version.cmake  create_signature_file.py
cmake/scripts/: FindVersion.cmake
os/macos/: Info.plist.in  Install  notarize.sh  openttd.icns
os/windows/: library_win32.manifest  library_win64.manifest
src/: plugin.cpp
src/openttd_social_integration_api/: openttd_social_integration_api.h  openttd_social_integration_api_v1.h
